create module and transfer scss and code.jsx

--- a/src/modules/Card/card.scss
+++ b/src/modules/Card/card.scss
@@ -1,5 +1,5 @@
-@use "../varibles" as *;
-@use "../media" as *;
+@use '../../scss/varibles' as *;
+@use '../../scss/media' as *;
 
 .card {
   background-color: $white;
@@ -58,7 +58,7 @@
 
   &__date-delivery {
     padding-left: 20px;
-    background-image: url("/img/delivery.svg");
+    background-image: url('/img/delivery.svg');
     background-repeat: no-repeat;
     background-position: left bottom;
     font-size: 14px;
