--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,5 +1,5 @@
-@use "./varibles" as *;
-@use "./media" as *;
+@use '@scss/varibles' as *;
+@use '@scss/media' as *;
 
 :root {
   position: relative;
