--- a/src/scss/preload.scss
+++ b/src/scss/preload.scss
@@ -15,7 +15,7 @@
   }
 
   &:after {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     border: 5px solid $green;
